@@ -1,11 +1,11 @@
 {
-  "count": 28,
-  "uniques": 2,
+  "count": 27,
+  "uniques": 1,
   "clones": [
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-07-23T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-24T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
